# ndb

./: CMakeLists.txt
include/ndb/: ndb.h  ndb.h.gch
playground/nanodb/: Makefile  main.c  mqtt_certs.txt  nanodb.h  ndb.proto  ndb_generator.py  pb.c  spwr.proto
src/: CMakeLists.txt  hstring.c
